# revoco

./: .clang-format  .dir-locals.el  .envrc  .gitignore  .gitmodules  CMakeLists.txt
include/librevoco/: cards.hxx  game_state.hxx  librevoco.hxx  spaced_repetition.hxx
src/idl/: fitb_card.fbs  flashcard.fbs  multiple_choice_card.fbs
src/librevoco/: cards.cxx  game_state.cxx  spaced_repetition.cxx
src/revoco_client/: main.cxx
src/web_client/: index.html  index.js
test/: CMakeLists.txt  test_parser.cxx
test/data/: flashcards.yaml
